# ai-pp-ragtests

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  analyze_test_data.py  kickStartTemplate-1.0.0.json  main.py  pyproject.toml  select_corpus.py
.claude/: settings.json
.github/workflows/: deploy-pages.yml
MultiEURLEX Search Agent/: settings.mcs.yml
agent-instructions/: README.md  multieurlex-search-agent-hybrid.md  multieurlex-search-agent-knowledge.md  multieurlex-search-agent-mcp.md  multieurlex-search-agent-semantic.md  multieurlex-search-agent.md
data/eval/: EvalConversationTemplate.csv  EvaluationTemplate_classic.csv  README.md  multieurlex_eval_set_copilot_import.csv  multieurlex_eval_set_copilot_import_classic.csv  multieurlex_eval_set_copilot_import_conversation.csv  multieurlex_eval_set_source.csv  multieurlex_eval_set_tierA_copilot_import_conversation.csv  multieurlex_eval_set_tierC_copilot_import_classic.csv  multieurlex_eval_set_tierC_copilot_import_conversation.csv  multieurlex_eval_set_tierD_copilot_import_conversation.csv  sample_response.json  (+1 more)
docs/: EVAL_APP_REGISTRATION.md
reports/: evaluation_report.md  knowledge-retrieval-methods-for-copilot-studio-agents_2026-06-30.html  selection_summary.md
scripts/: 01_data_explore.py  02_data_select_corpus.py  03_dv_create_table.py  04_dv_load_corpus.py  05_dv_load_knowledge.py  06_eval_build_set.py  07_eval_run.py  08_eval_collect.py  09_eval_analyze.py  analyze_eval_results.py  build_eval_set.py  collect_eval_results.py  load_knowledge_files.py  phase5_load_data.py  run_agent_evals.py
(+77 files in other folders)
