[project]
name = "ai-pp-ragtests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "datasets>=5.0.0",
    "huggingface-hub>=1.21.0",
    "msal>=1.37.0",
    "msal-extensions>=1.3.1",
    "pandas>=3.0.3",
    "powerplatform-dataverse-client>=1.0.0",
    "requests>=2.34.2",
]
